Add class for flash message at css and update flform

--- a/WEB_APP/static/css/main.css
+++ b/WEB_APP/static/css/main.css
@@ -31,3 +31,13 @@ div {
   color: white;
   transition: .3s linear;
 }
+
+.flash { padding: 10px; }
+.flash.success {
+  border: 1px solid #21DB56;
+  background: #AEFFC5;
+}
+.flash.error {
+  border: 1px solid #ff4343;
+  background: #FF9C9C;
+}
