Add dark theme css for flash messages

--- a/WEB_APP/static/css/dark.css
+++ b/WEB_APP/static/css/dark.css
@@ -16,3 +16,11 @@ div {
 .top-menu {
   background-color: #333;
 }
+
+.flash.error {
+  color: #1e1e1e;
+}
+
+.flash.success {
+  color: #1e1e1e;
+}
