--- a/WEB_APP/static/css/dark.css
+++ b/WEB_APP/static/css/dark.css
@@ -5,10 +5,10 @@ h1 {
     color: #f1f1f1;
 }
 A:visited {
-    color: #c58af9;
+    color: #8061eb;
 }
 A:hover {
-  background-color: #2978ee;
+  background-color: #f1e0d7;
 }
 div {
     color: #f1f1f1;
