--- a/WEB_APP/static/css/main.css
+++ b/WEB_APP/static/css/main.css
@@ -28,7 +28,7 @@ div {
   line-height: 50px;
   padding: 0 5px;
   font-size: 2em;
-  color: white;
+  color: #a59aec;
   transition: .3s linear;
 }
 
