--- a/WEB_APP/templates/index.html
+++ b/WEB_APP/templates/index.html
@@ -2,5 +2,14 @@
 
 {% block content %}
 {{ super() }}
-<p>Content of main page</p>
+<hr>
+<h2>Список статей</h2>
+<ul class="list-posts">
+    {% for p in posts %}
+        <li>
+            <p class="title"><a href="{{ url_for('show_post', id_post=p.id)}}">{{p.title}}</a></p>
+            <p class="announcement">{{p.posttext[:50]}}...</p>
+        </li>
+    {% endfor %}
+</ul>
 {% endblock %}
