--- a/WEB_APP/templates/add_post.html
+++ b/WEB_APP/templates/add_post.html
@@ -7,6 +7,7 @@
 {% endfor %}
 <form action="{{url_for('add_post')}}" method="post" class="form-contact">
     <p><label for="name">Название статьи: </label><input type="text" name="name" value="" required></p>
+    <p><label for="url">URL статьи: </label><input type="text" name="url" value="" required></p>
     <p><label for="post">Текст статьи: </label><textarea name="post" rows="7" cols="40" id=""></textarea></p>
     <p><input type="submit" value="Добавить"></p>
 </form>
