--- a/WEB_APP/templates/base.html
+++ b/WEB_APP/templates/base.html
@@ -7,7 +7,7 @@
         {% if request.cookies.get("theme") %}
             <link rel="stylesheet" href="/static/css/{{ request.cookies.get("theme") }}.css">
         {% else %}
-            <link rel="stylesheet" href=""{{ url_for('static', filename='css/light.css') }}s">
+            <link rel="stylesheet" href="{{ url_for('static', filename='css/light.css') }}">
         {% endif %}
         {% block title -%}
             {% if title %}
